--- a/competitions.html
+++ b/competitions.html
@@ -10,19 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html"><img src="uwaggsLogo.png" alt="" class="uwaggsLogo"></a>
+    <!-- <a href="index.html"><img src="uwaggsLogo.png" alt="" class="uwaggsLogo"></a> -->
     <nav>
-    <!-- <a href="index.html"><img src="uwaggsLogo.png" alt="" class="main-menu"></a> -->
+    <a href="index.html"><img src="uwaggsLogo.png" alt="" class="main-menu"></a>
 
     <ul id="left-nav">
         <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="club-info.html" class="nav-link">Club Info</a></li>
         <li><a href="sessions.html" class="nav-link">Sessions</a></li>
         <li><a href="our-team.html" class="nav-link">Our Team</a></li>
         <li><a href="projects.html" class="nav-link">Projects</a></li>
-        <li><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="blank">Mailing List</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></li>
         <li><a class="nav-link" class="clickable" onclick="toggleDropdown2()">External Opportunities</a>
         <div id="drop"><a href="conferences.html" class="drop-btn">Conferences</a><a href="competitions.html" class="drop-btn">Competitions</a></div></li>
+    </ul>
+
+    <ul id="right-nav">
+        <li><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="blank">Mailing List</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></li>
     </ul>
 
         <!-- <ul id="right-nav">
@@ -48,6 +52,7 @@
         <div class="inner-content">
             <div class="dropdown-items" id="dropdown-id">
                 <div class="item"><a href="index.html" class="nav-link">Home</a></div>
+                <div class="item"><a href="club-info.html" class="nav-link">Club Info</a></div>
                 <div class="item"><a href="sessions.html" class="nav-link">Sessions</a></div>
                 <div class="item"><a href="our-team.html" class="nav-link">Our Team</a></div>
                 <div class="item"><a href="projects.html" class="nav-link">Projects</a></div>
@@ -63,7 +68,7 @@
 
     <div class="outer-content">
         <div class="inner-content">
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTe0EEW_9vywa9QfISmgbdDPj-yVW2qszJ3Vdn7211pjDvP2qidiD8tiFXCSXAhGnPP3ioUocm5tnIG/pub?embedded=true"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vRNWQSGm49pjadoJYSTSZXjqErxZgXHi0MqYObD6_AijRkUQ_6fhxBD4XliSvzPxMx8OOoJWwvr1VeW/pub?embedded=true"></iframe>
 
 
 
@@ -73,3 +78,4 @@
 </html>
 
 <script src="script.js"></script>
+
