--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html"><img src="uwaggsLogo.png" alt="" class="uwaggsLogo"></a>
+    <!-- <a href="index.html"><img src="uwaggsLogo.png" alt="" class="uwaggsLogo"></a> -->
     <nav>
-    <!-- <a href="index.html"><img src="uwaggsLogo.png" alt="" class="main-menu"></a> -->
+    <a href="index.html"><img src="uwaggsLogo.png" alt="" class="main-menu"></a>
 
         <ul id="left-nav">
             <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="club-info.html" class="nav-link">Club Info</a></li>
             <li><a href="sessions.html" class="nav-link">Sessions</a></li>
             <li><a href="our-team.html" class="nav-link">Our Team</a></li>
             <li><a href="projects.html" class="nav-link">Projects</a></li>
-            <li><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="blank">Mailing List</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></li>
             <li><a class="nav-link" class="clickable" onclick="toggleDropdown2()">External Opportunities</a>
             <div id="drop"><a href="conferences.html" class="drop-btn">Conferences</a><a href="competitions.html" class="drop-btn">Competitions</a></div></li>
+        </ul>
+
+        <ul id="right-nav">
+            <li><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="blank">Mailing List</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></li>
         </ul>
 
         <!-- <ul id="right-nav">
@@ -48,6 +52,7 @@
 
             <div class="dropdown-items" id="dropdown-id">
                 <div class="item"><a href="index.html" class="nav-link">Home</a></div>
+                <div class="item"><a href="club-info.html" class="nav-link">Club Info</a></div>
                 <div class="item"><a href="sessions.html" class="nav-link">Sessions</a></div>
                 <div class="item"><a href="our-team.html" class="nav-link">Our Team</a></div>
                 <div class="item"><a href="projects.html" class="nav-link">Projects</a></div>
@@ -67,9 +72,9 @@
                         <li>Attend seminars from respected members of the sports analytics community</li>
                         <li>Present research at and attend conferences</li>
                     </ol>
-                    <p>We meet in a hybrid format bi-weekly throughout the school year. Supplementary information from previous sessions can be found in the “Events” tab.</p>
+                    <p>We meet in a hybrid format bi-weekly throughout the school year. Supplementary information from previous sessions can be found in the <a href="events.html" class="bold-hyperlink">Events</a> tab.</p>
 
-            <div class="section">
+            <!-- <div class="section">
                 <h2>Software for Analytics</h2>
                 <div class="logos">
                     <img src="Rlogo.PNG" alt="" class="logo">
@@ -79,16 +84,16 @@
                     <img src="Tableau-logo-300x235.png" alt="" class="logo">
                 </div>
                 <p>Sports analytics was built from the open source community, and as such <a href="https://www.r-project.org/" class="language">R</a>, <a href="https://www.python.org/" class="language">Python</a>, and <a href="https://julialang.org/" class="language">Julia</a> are the typical languages of choice, augmented by <a href="https://www.postgresql.org/" class="language">SQL</a> and <a href="https://www.tableau.com/" class="language">Tableau</a>.</p>
-            </div>
+            </div> -->
             
             <div class="section">
                 <h2>Interested? Get in Touch!</h2>
-                <p>Join our <a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="join-link">mailing list</a> and fill out our <a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="join-link">declaration of interest</a>  form</p>
+                <p>Join our <a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="join-link" target="blank">mailing list</a> and fill out our <a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="join-link" target="blank">declaration of interest</a>  form</p>
             </div>
 
             <h3>Contact Information</h3>
             <p>Email: <a href="mailto:uwaggsmailer@gmail.com" class="email">uwaggsmailer@gmail.com</a></p>
-            <p>Further contact avenues can be found from our <a href="https://linktr.ee/uwaggs" class="join-link">linktree</a></p>
+            <p>Further contact avenues can be found from our <a href="https://linktr.ee/uwaggs" class="join-link" target="blank">linktree</a></p>
 
             <!-- <div id="profiles">
                 <div class="profile">
@@ -114,3 +119,4 @@
 </html>
 
 <script src="script.js"></script>
+
