add photos and information to `our-team.html`, changed an incorrect date in `sessions.html`, and removed the latin placeholder text in `club-info.html`

--- a/club-info.html
+++ b/club-info.html
@@ -62,7 +62,7 @@
                 </div>
             
                 <h2>Who are we?</h2>
-                <p>Lorum ipsum</p>
+                <p>Detailed club information and stats coming soon!</p>
  
         </div>
     </div>
