--- a/our-team.html
+++ b/our-team.html
@@ -65,19 +65,19 @@
             <div id="profiles">
                 <div class="profile">
                     <h3>Jack Davis</h3>
-                    <div class="profile-pic"></div>
-                    <p>Role: <br> <br> Academic Field: <br> <br> Interested in:</p>
+                    <img class="profile-pic" src ="jack-davis-headshot.jpg" alt = "">
+                    <p> <b>Role: </b> Faculty Liaison <br> <br> <b>Academic Field: </b>  Lecturer, Statistics and Actuarial Science <br> <br> <b>Interested in: </b>horse racing, cricket, poker, and hockey </p>
                     <!-- <p>Faculty Lecturer in Statistics and Actuarial Science</p>
                     <p>Currently studying poker and horse racing</p> -->
-                    <p>Contact: <a href="mailto:mj2davis@uwaterloo.ca" class="email">mj2davis@uwaterloo</a></p>
+                    <p> <b>Contact: </b><a href="mailto:mj2davis@uwaterloo.ca" class="email">mj2davis@uwaterloo.ca</a></p>
                 </div>
                 <div class="profile">
                     <h3>David Awosoga</h3>
-                    <div class="profile-pic"></div>
-                    <p>Role: <br> <br> Academic Field: <br> <br> Interested in:</p>
+                    <img class="profile-pic" src = "david-awosoga-headshot.jpeg" alt = "">
+                    <p> <b> Role:</b> Club Founder <br> <br> <b>Academic Field:</b> Master's Student, Data Science <br> <br> <b>Interested in:</b> volleyball, baseball, basketball, and athletics</p>
                     <!-- <p>MMath Data Science</p> -->
                     <!-- <p>I'm interested in volleyball, baseball, basketball, and athletics</p> -->
-                    <p>Contact: <a href="mailto:david.awosoga@uwaterloo.ca" class="email">david.awosoga@uwaterloo</a></p>
+                    <p> <b>Contact:</b> <a href="mailto:david.awosoga@uwaterloo.ca" class="email">david.awosoga@uwaterloo.ca</a></p>
                 </div>
             </div>
  
