--- a/our-team.html
+++ b/our-team.html
@@ -42,6 +42,22 @@
 
     </nav>
 
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="outer-content" id="nav-oc">
+            <div class="dropdown-items" id="dropdown-id">
+                <div class="item"><a href="index.html" class="nav-link">Home</a></div>
+                <div class="item"><a href="club-info.html" class="nav-link">Club Info</a></div>
+                <div class="item"><a href="sessions.html" class="nav-link">Sessions</a></div>
+                <div class="item"><a href="our-team.html" class="nav-link">Our Team</a></div>
+                <div class="item"><a href="projects.html" class="nav-link">Projects</a></div>
+                <div class="item"><a href="conferences.html" class="nav-link">Conferences</a></div>
+                <div class="item"><a href="competitions.html" class="nav-link">Competitions</a></div>
+                <div class="item"><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="_blank">Mailing List</a></div>
+                <div class="item"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></div>
+                </div>
+        </div>
+    </div>
+
 
     <div class="outer-title">
         <h1 class="inner-title">Our Team</h1>
@@ -50,30 +66,37 @@
     <div class="outer-content">
     
         <div class="inner-content">
-            <div class="dropdown-items" id="dropdown-id">
-                <div class="item"><a href="index.html" class="nav-link">Home</a></div>
-                <div class="item"><a href="club-info.html" class="nav-link">Club Info</a></div>
-                <div class="item"><a href="sessions.html" class="nav-link">Sessions</a></div>
-                <div class="item"><a href="our-team.html" class="nav-link">Our Team</a></div>
-                <div class="item"><a href="projects.html" class="nav-link">Projects</a></div>
-                <div class="item"><a href="mailing.html" class="nav-link">Mailing List</a></div>
-                <div class="item"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link">Declaration of Interest</a></div>
-                <div class="item"><a href="conferences.html" class="nav-link">Conferences</a></div>
-                <div class="item"><a href="competitions.html" class="nav-link">Competitions</a></div>
-                </div>
             
-            <div id="profiles">
+            <!-- <div id="profiles">
                 <div class="profile">
                     <h3>Jack Davis</h3>
-                    <img class="profile-pic" src ="jack-davis-headshot.jpg" alt = "">
+                    <div class="profile-pic"></div>
+                    <p>Role: <br> <br> Academic Field: <br> <br> Interested in:</p>
+                    <p>Contact: <a href="mailto:mj2davis@uwaterloo.ca" class="email">mj2davis@uwaterloo</a></p>
+                </div>
+                <div class="profile">
+                    <h3>David Awosoga</h3>
+                    <div class="profile-pic"></div>
+                    <p>Role: <br> <br> Academic Field: <br> <br> Interested in:</p>
+                    <p>Contact: <a href="mailto:david.awosoga@uwaterloo.ca" class="email">david.awosoga@uwaterloo</a></p>
+                </div>
+            </div> -->
+
+            <div class="profile">
+                <img class="profile-pic" src ="jack-davis-headshot.jpg" alt = "">
+                <div class="profile-info">
+                    <h3>Jack Davis</h3>
                     <p> <b>Role: </b> Faculty Liaison <br> <br> <b>Academic Field: </b>  Lecturer, Statistics and Actuarial Science <br> <br> <b>Interested in: </b>horse racing, cricket, poker, and hockey </p>
                     <!-- <p>Faculty Lecturer in Statistics and Actuarial Science</p>
                     <p>Currently studying poker and horse racing</p> -->
                     <p> <b>Contact: </b><a href="mailto:mj2davis@uwaterloo.ca" class="email">mj2davis@uwaterloo.ca</a></p>
                 </div>
-                <div class="profile">
+            </div>
+
+            <div class="profile">
+                <img class="profile-pic" src = "david-awosoga-headshot.jpeg" alt = "">
+                <div class="profile-info">
                     <h3>David Awosoga</h3>
-                    <img class="profile-pic" src = "david-awosoga-headshot.jpeg" alt = "">
                     <p> <b> Role:</b> Club Founder <br> <br> <b>Academic Field:</b> Master's Student, Data Science <br> <br> <b>Interested in:</b> volleyball, baseball, basketball, and athletics</p>
                     <!-- <p>MMath Data Science</p> -->
                     <!-- <p>I'm interested in volleyball, baseball, basketball, and athletics</p> -->
@@ -84,13 +107,61 @@
         </div>
     </div>
 
-    <div class="outer-content">
+    <!-- <div class="outer-content">
         <div class="inner-content">
 
 
         </div>
-    </div>
+    </div> -->
+
+    <footer>
+        <div class="outer-footer">
+            <div class="inner-footer">
+                <div class="left-footer">
+                    <h3>Subscribe</h3>
+                    <a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" target=”_blank” class="footer-link">Mailing List</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" target=”_blank” class="footer-link">Declaration of Interest</a>
+                </div>
+                <div class="center-footer">
+                    <h3>Follow us</h3>
+                    <div class="socials">
+                        <div class="social-logo">
+                            <a href="https://www.instagram.com/uwaggs" target="_blank"><img src="instagram.svg" alt=""></a>
+                        </div>
+                        <div class="social-logo">
+                            <a href="https://www.linkedin.com/company/university-of-waterloo-analytics-group-for-games-and-sports/" target="_blank"><img src="linkedin.svg" alt=""></a>
+                        </div>
+                        <div class="social-logo">
+                            <a href="https://github.com/uwaggs" target="_blank"><img src="github.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-footer">
+                    <h3>Contact</h3>
+                    <a href="mailto:uwaggsmailer@gmail.com" class="footer-link">uwaggsmailer@gmail.com</a>
+                    <div class="logo-mq">
+                        <div class="socials">
+                            <div class="social-logo">
+                                <a href="https://www.instagram.com/uwaggs" target="_blank"><img src="instagram.svg" alt=""></a>
+                            </div>
+                            <div class="social-logo">
+                                <a href="https://www.linkedin.com/company/university-of-waterloo-analytics-group-for-games-and-sports/" target="_blank"><img src="linkedin.svg" alt=""></a>
+                            </div>
+                            <div class="social-logo">
+                                <a href="https://github.com/uwaggs" target="_blank"><img src="github.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
+
+
+
 </html>
 
 <script src="script.js"></script>
