--- a/competitions.html
+++ b/competitions.html
@@ -42,29 +42,27 @@
 
     </nav>
 
-
-    <div class="outer-title">
-        <h1 class="inner-title">Competitions</h1>
-    </div>
-
-    <div class="outer-content">
-    
-        <div class="inner-content">
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="outer-content" id="nav-oc">
             <div class="dropdown-items" id="dropdown-id">
                 <div class="item"><a href="index.html" class="nav-link">Home</a></div>
                 <div class="item"><a href="club-info.html" class="nav-link">Club Info</a></div>
                 <div class="item"><a href="sessions.html" class="nav-link">Sessions</a></div>
                 <div class="item"><a href="our-team.html" class="nav-link">Our Team</a></div>
                 <div class="item"><a href="projects.html" class="nav-link">Projects</a></div>
-                <div class="item"><a href="mailing.html" class="nav-link">Mailing List</a></div>
-                <div class="item"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link">Declaration of Interest</a></div>
                 <div class="item"><a href="conferences.html" class="nav-link">Conferences</a></div>
                 <div class="item"><a href="competitions.html" class="nav-link">Competitions</a></div>
+                <div class="item"><a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" class="nav-link" target="_blank">Mailing List</a></div>
+                <div class="item"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" class="nav-link" target="_blank">Declaration of Interest</a></div>
                 </div>
-            
- 
         </div>
     </div>
+
+    <div class="outer-title">
+        <h1 class="inner-title">Competitions</h1>
+    </div>
+
+   
 
     <div class="outer-content">
         <div class="inner-content">
@@ -75,7 +73,51 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="outer-footer">
+        <div class="inner-footer">
+            <div class="left-footer">
+                <h3>Subscribe</h3>
+                <a href="https://gmail.us10.list-manage.com/subscribe?u=f6e8da7174c7d317758d5e871&id=cd89def6af" target=”_blank” class="footer-link">Mailing List</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScXQDcEcnyehay8hTphzvxWqyYR8fbdHV66DK5gAsAc4ZLhZw/viewform" target=”_blank” class="footer-link">Declaration of Interest</a>
+            </div>
+            <div class="center-footer">
+                <h3>Follow us</h3>
+                <div class="socials">
+                    <div class="social-logo">
+                        <a href="https://www.instagram.com/uwaggs" target="_blank"><img src="instagram.svg" alt=""></a>
+                    </div>
+                    <div class="social-logo">
+                        <a href="https://www.linkedin.com/company/university-of-waterloo-analytics-group-for-games-and-sports/" target="_blank"><img src="linkedin.svg" alt=""></a>
+                    </div>
+                    <div class="social-logo">
+                        <a href="https://github.com/uwaggs" target="_blank"><img src="github.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-footer">
+                <h3>Contact</h3>
+                <a href="mailto:uwaggsmailer@gmail.com" class="footer-link">uwaggsmailer@gmail.com</a>
+                <div class="logo-mq">
+                    <div class="socials">
+                        <div class="social-logo">
+                            <a href="https://www.instagram.com/uwaggs" target="_blank"><img src="instagram.svg" alt=""></a>
+                        </div>
+                        <div class="social-logo">
+                            <a href="https://www.linkedin.com/company/university-of-waterloo-analytics-group-for-games-and-sports/" target="_blank"><img src="linkedin.svg" alt=""></a>
+                        </div>
+                        <div class="social-logo">
+                            <a href="https://github.com/uwaggs" target="_blank"><img src="github.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
 
 <script src="script.js"></script>
+
 
