wrote the `club-info` page and made small grammatical changes to `index.html`

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <li>Attend seminars from respected members of the sports analytics community</li>
                         <li>Present research at and attend conferences</li>
                     </ol>
-                    <p>We meet in a hybrid format bi-weekly throughout the school year. Supplementary information from previous sessions can be found in the <a href="sessions.html" class="bold-hyperlink">sessions</a> tab.</p>
+                    <p>We meet in a hybrid format bi-weekly throughout the school year. Supplementary information from previous sessions can be found in the <a href="sessions.html" class="bold-hyperlink">Sessions</a> tab.</p>
 
             <!-- <div class="section">
                 <h2>Software for Analytics</h2>
